# unified-executors

./: .clang-format  CMakeLists.txt  CMakeLists_8txt.html  LICENSE  README.md  TODO.md  allocator_8hpp.html  allocator_8hpp__dep__incl.map  allocator_8hpp__dep__incl.md5  allocator_8hpp__incl.map  allocator_8hpp__incl.md5  allocator_8hpp_source.html  annotated.html  base__property_8hpp.html  base__property_8hpp__dep__incl.map  base__property_8hpp__dep__incl.md5  base__property_8hpp__incl.map  base__property_8hpp__incl.md5  base__property_8hpp_source.html  best__fit_8hpp.html  best__fit_8hpp__dep__incl.map  best__fit_8hpp__dep__incl.md5  best__fit_8hpp__incl.map  best__fit_8hpp__incl.md5  best__fit_8hpp_source.html  blocking_8cpp.html  blocking_8cpp__incl.map  blocking_8cpp__incl.md5  blocking_8hpp.html  blocking_8hpp__dep__incl.map  blocking_8hpp__dep__incl.md5  blocking_8hpp__incl.map  blocking_8hpp__incl.md5  blocking_8hpp_source.html  can__prefer_8hpp.html  can__prefer_8hpp__dep__incl.map  can__prefer_8hpp__dep__incl.md5  can__prefer_8hpp__incl.map  can__prefer_8hpp__incl.md5  can__prefer_8hpp_source.html  (+343 more)
.github/workflows/: ci.yml
application/: CMakeLists.txt
application/include/: mmul.cuh  mmul.hpp
application/src/: executor.cpp  mmul.cu
application/test/: mmul.cpp
docs/: Doxyfile  executors.doxy
executor/: CMakeLists.txt
executor/include/execution/: cuda_executor.cu  cuda_executor.cuh  executor.h  executor.hpp  property.h  property.hpp  type_trait.hpp
executor/include/execution/executor/: base_executor.hpp  cuda_executor.hpp  inline_executor.hpp  omp_executor.hpp  sse_executor.hpp
executor/include/execution/property/: allocator.hpp  base_property.hpp  blocking.hpp  direction.hpp  interface.hpp  shape.hpp
executor/include/execution/trait/: can_prefer.hpp  can_query.hpp  can_require.hpp  common_traits.hpp  is_executor.hpp  is_executor_available.hpp  is_instance_of_base.hpp
executor/include/executor/: best_fit.hpp  executor.h  property.h  type_trait.h
executor/include/executor/default/: base_executor.hpp  cuda_executor.hpp  inline_executor.hpp  omp_executor.hpp  sse_executor.hpp
executor/include/executor/property/: allocator.hpp  base_property.hpp  blocking.hpp  shape.hpp
executor/include/executor/trait/: can_prefer.hpp  can_query.hpp  can_require.hpp  common_traits.hpp  index.hpp  is_executor.hpp  is_executor_available.hpp  is_instance_of_base.hpp  shape.hpp
executor/src/property/: blocking.cpp
include/: matrix_mul.h  mmul.cuh  mmul.hpp  mmul_gpu.h  sfinae_exec.h  sfinae_exec.hpp  sfinae_prop.hpp  sfinae_traits.hpp
include/execution/: executor.cu  executor.hpp  executor_gpu.h  property.hpp  type_traits.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  (+41 more)
src/: executor.cpp  mmul.cu  sfinae_exec.cpp  template_meta_plg.cpp
test/: main.cpp
unified_executor/: CMakeLists.txt
unified_executor/include/execution/: executor.hpp  property.hpp  shape.hpp  type_traits.hpp
